--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -21,3 +21,14 @@ slorber:
     linkedin: sebastienlorber
     github: slorber
     newsletter: https://thisweekinreact.com
+
+harrylee:
+  name: Harry Lee
+  title: UIT senior
+  url: https://harrylee.id.vn/
+  # image_url: https://github.com/slorber.png
+  page: true
+  socials:
+    linkedin: hieule-harrylee
+    github: HarryLee02
+
